--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body{
+    background-color: #111111;
+    overflow-x: hidden;
+    color: rgb(202, 219, 219);
+    
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+   /* border: 05px solid red;*/
+}
+
+.gsc-results-wrapper-overlay{
+    width: 100% !important;
+   position: relative !important;
+   margin: 0px !important;
+   left: 0 !important;
+   height: 100% !important;
+   margin-top: 40px !important;
+   display: block !important;
+}
+
+.gsc-modal-background-image{
+    display: none !important;
+    
 }
